Test/errors/err_unknown_identifier.cb
extern int main()
{
    expect_error("Undefined variable foo.");
    int x = foo + 1;
    return x;
}
